--- a/report/settings/set-tables.sty
+++ b/report/settings/set-tables.sty
@@ -1,7 +1,9 @@
 \usepackage{
-    array,      % array: parsa >{}
+    array,  
     booktabs,   % booktabs: righe orizzontali nelle tabela
-    tabularx    % tabularx: tabella migliori
+    ltablex,
+    tabularx,    % tabularx: tabella migliori,
+    multirow,
 }
 
 % vecchio modo per comandi, nomenclatura: cammelCase/PascalCase (no snake_case, no trattini)
@@ -10,3 +12,4 @@
     \midrule[\lightrulewidth]% 
     \arrayrulecolor{black}%
 }
+
