--- a/report/assets/bibliography.bib
+++ b/report/assets/bibliography.bib
@@ -1,26 +1,9 @@
-@online{prof-slides,
-  author      = {Laura del Río Martín, Professor},
-  title       = {OpenMP Techniques for Shared Memory Architectures},
-  year        = {2023},
-  url         = {https://didatticaonline.unitn.it/dol/pluginfile.php/1776866/mod_folder/content/0/IntroPARCO-L10.pdf?forcedownload=1},
-  note        = {Lecture 10 slides for professor's Vella course Introduction to parallel computing},
-}
-
 @online{hybrid-mpi-openmp,
   author = {Claudia Truini, Luca Ferraro, Vittorio Ruggiero},
   title = {Hybrid Parallel Programming with MPI and OpenMP},
   year = {2013},
   url = {https://hpc-forge.cineca.it/files/CoursesDev/public/2013/Introduction%20to%20Parallel%20Computing%20with%20MPI%20and%20OpenMP/Roma/Hybrid-handouts.pdf},
   note = {Analisi delle performance e parallelizzazione ibrida}
-}
-
-@misc{magalhaes2020efficient,
-      title={Efficient Distributed Transposition Of Large-Scale Multigraphs And High-Cardinality Sparse Matrices}, 
-      author={Bruno Magalhaes and Felix Schürmann},
-      year={2020},
-      eprint={2012.06012},
-      archivePrefix={arXiv},
-      primaryClass={cs.DC}
 }
 
 @InProceedings{10.1007/978-3-319-12307-3_14,
@@ -41,7 +24,7 @@ abstract="An adaptive parallel matrix transpose algorithm optimized for distribu
 isbn="978-3-319-12307-3"
 }
 
-@INPROCEEDINGS{1592842,
+@InProceedings{1592842,
   author={Yun He and H. Q. Ding},
   booktitle={SC '02: Proceedings of the 2002 ACM/IEEE Conference on Supercomputing}, 
   title={MPI and OpenMP Paradigms on Cluster of SMP Architectures: The Vacancy Tracking Algorithm for Multi-Dimensional Array Transposition}, 
@@ -52,7 +35,7 @@ isbn="978-3-319-12307-3"
   doi={10.1109/SC.2002.10065}
 }
 
-@inproceedings{10.1145/777412.777433,
+@InProceedings{10.1145/777412.777433,
 author = {Krawezik, G\'{e}raud},
 title = {Performance Comparison of MPI and Three OpenMP Programming Styles on Shared Memory Multiprocessors},
 year = {2003},
