--- a/report/report.tex
+++ b/report/report.tex
@@ -32,6 +32,8 @@
     \input{sections/0-introduction}
 
     \input{sections/1-matrix-transposition}
+
+    \clearpage
     \input{sections/2-parallelism-comparison}
 
     \clearpage
