--- a/report/assets/tables/strong-scaling.tex
+++ b/report/assets/tables/strong-scaling.tex
@@ -6,24 +6,27 @@
         & & \textbf{Run Time [s]} & \textbf{Bandwidth [GB/s]} & \textbf{Run Time [s]} & \textbf{Bandwidth [GB/s]} \\
     \midrule
     \endhead
-        \multirow{4}{*}{512} & 1  &  &  &  &  \\
-                             & 4  &  &  &  &  \\
-                             & 16 &  &  &  &  \\
-                             & 64 &  &  &  &  \\
+        \multirow{4}{*}{512} & 1	& 0.002226	& 1,413	& 0.005520	& 0.760 \\
+                             & 4	& 0.002251	& 1,397	& 0.003363	& 1,247 \\
+                             & 16	& 0.005359	& 0,587	& 0.003376	& 1,242 \\
+                             & 64	& 0.014420	& 0,218	& 0.009164	& 0,458 \\
     \midrule
-        \multirow{4}{*}{2048} & 1  &  &  &  &  \\
-                              & 4  &  &  &  &  \\
-                              & 16 &  &  &  &  \\
-                              & 64 &  &  &  &  \\
+        \multirow{4}{*}{2048} & 1   & 0.064612 & 0.779 & 0.079998 & 0.839 \\
+                              & 4   & 0.026691 & 1.886 & 0.044276 & 1.516 \\
+                              & 16  & 0.025379 & 1.983 & 0.041785 & 1.606 \\
+                              & 64  & 0.083068 & 0.606 & 0.049830 & 1.347 \\
+        
     \midrule
-        \multirow{4}{*}{8192} & 1  &  &  &  &  \\
-                              & 4  &  &  &  &  \\
-                              & 16 &  &  &  &  \\
-                              & 64 &  &  &  &  \\
+        \multirow{4}{*}{8192} & 1   & 3.729533 & 0.216 & 2.515364 & 0.427 \\
+                              & 4   & 1.019834 & 0.790 & 0.901501 & 1.191 \\
+                              & 16  & 1.176419 & 0.685 & 0.627510 & 1.711 \\
+                              & 64  & 1.462280 & 0.551 & 0.765071 & 1.403 \\
+        
     \midrule
-        \multirow{4}{*}{32768} & 1  &  &  &  &  \\
-                               & 4  &  &  &  &  \\
-                               & 16 &  &  &  &  \\
-                               & 64 &  &  &  &  \\
+        \multirow{4}{*}{32768} & 1  & 57.112991 & 0.226 & 67.101906 & 0.256 \\
+                               & 4  & -         & -     & 24.95976 & 0.688 \\
+                               & 16 & -         & -     & 11.06617 & 1.552 \\
+                               & 64 & -         & -     & 11.33467 & 1.516 \\
+        
     \bottomrule
 \end{tabularx}
